<resources>
    <string name="app_name">Spotify wrapped group 5</string>
    <string name="login_button">Log in</string>
    <string name="signup_button">Sign up</string>
    <string name="full_name">Full Name: </string>
    <string name="username">Username: </string>
    <string name="email">Email: </string>
    <string name="password">Password: </string>
    <string name="verify">Verify Password: </string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>